--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.3",
     "nodemailer": "^6.9.16",
+    "nodemailer-sendgrid": "^1.0.3",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
   }
